--- a/t00/CMakeLists.txt
+++ b/t00/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 3.18.2)
+cmake_minimum_required(VERSION 3.16.3)
+
+set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE helloTamriel.cpp)
 set(TARGET helloTamriel) 
