--- a/t05/CMakeLists.txt
+++ b/t05/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 3.18.2)
+cmake_minimum_required(VERSION 3.16.3)
+
+set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE main.cpp)
 set(TARGET automaton) 
